syntax = "proto3";

package pb.unit.article;
option go_package = "github.com/aglide100/dak-keyword/pb/unit/article";

message Article {
    string id = 1;
    string author = 2;
    string keyword = 3;
    string content = 4;
    string platform = 5;
    string score_pos = 6;
    string score_neg = 7;
    string score_neut = 8;
    string score_comp = 9;
    string score_none = 10;
    string score_max_value= 11;
    string score_max_name = 12;
    string create_at = 13;
    string job_id = 14;
    string worker_id = 15;
}